@@ -50,10 +50,6 @@
 #define _PATH_RESCONF "/etc/resolv.conf"
 #endif
 
-#ifdef linux
-#include <linux/version.h>
-#endif
-
 #define Debug(s) fprintf(stderr, s "\n");
 
 Opener::Opener(int s) : socket(s) {
@@ -231,23 +227,6 @@ int Opener::sendFD(const char *path, int fd,
   // What's the duplicating good for ?
   //  *((int *) &control.cmsg.cmsg_data) = dup(ttyfd);
 
-  /* if compilation fails here, it is very likely that you:
-   * a) have another OS than Linux, in which case you should
-   *    try to figure out how this works on your system, and
-   *    then tell me.
-   * b) You have an early Linux 2.1.X release. The handling of
-   *    "struct cmsg" changed in 2.1 release, but I did not check
-   *    which kernel version the change was introduced. Try to
-   *    set 2.1.0 to your kernel version +1, e.g. if you use 2.1.43,
-   *    change it to KERNEL_VERSION(2,1,44)
-   *
-   * In either case, please drop me a note.
-   */
-// #if defined(linux) && (LINUX_VERSION_CODE >= KERNEL_VERSION(2,1,0))
-//   *((int *)CMSG_DATA(&control)) = fd;
-// #else
-//   *((int *) &control.cmsg.cmsg_data) = fd;
-// #endif
 // Let's try it this way. Should work on FreeBSD, too.
 #ifdef CMSG_DATA
   *((int *)CMSG_DATA(&control)) = fd;
