@@ -1,3 +1,3 @@
 #ifndef KPPPVERSION
-#define KPPPVERSION "1.5.7 (Release 135)"
+#define KPPPVERSION "1.5.8 (Release 135)"
 #endif
