@@ -1,6 +1,7 @@
 1998-11-26  Mario Weilguni <mweilguni@kde.org>
 	
 	* added missing rules for Switzerland, and added kppp.sh
+	* replace SOCK_DGRAM by SOCK_STREAM, and hope that it works
 
 1998-11-26  Harri Porten  <porten@kde.org>
 
